--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "vue": "2.5.13"
+    "vue": "2.5.13",
+    "vue-router": "^3.5.1"
   },
   "devDependencies": {
     "autoprefixer": "7.2.3",
