--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   "license": "ISC",
   "dependencies": {
     "vue": "2.5.13",
-    "vue-router": "^3.5.1"
+    "vue-router": "^3.5.1",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "autoprefixer": "7.2.3",
